crates/core/tests/fsm_trybuild/dupe_transitions_fail.rs
use temporalio_macros::fsm;

fsm! {
    name SimpleMachine; command SimpleMachineCommand; error Infallible;

    One --(A)--> Two;
    One --(A)--> Two;
}

#[derive(Default, Clone)]
pub struct One {}

#[derive(Default, Clone)]
pub struct Two {}

fn main() {}
